--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -21,10 +21,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'suit': 'hearts', 'rank': 2},\n",
+       " {'suit': 'hearts', 'rank': 3},\n",
+       " {'suit': 'hearts', 'rank': 4},\n",
+       " {'suit': 'hearts', 'rank': 5},\n",
+       " {'suit': 'hearts', 'rank': 6},\n",
+       " {'suit': 'hearts', 'rank': 7},\n",
+       " {'suit': 'hearts', 'rank': 8},\n",
+       " {'suit': 'hearts', 'rank': 9},\n",
+       " {'suit': 'hearts', 'rank': 10},\n",
+       " {'suit': 'hearts', 'rank': 11},\n",
+       " {'suit': 'hearts', 'rank': 12},\n",
+       " {'suit': 'hearts', 'rank': 13},\n",
+       " {'suit': 'hearts', 'rank': 14},\n",
+       " {'suit': 'diamonds', 'rank': 2},\n",
+       " {'suit': 'diamonds', 'rank': 3},\n",
+       " {'suit': 'diamonds', 'rank': 4},\n",
+       " {'suit': 'diamonds', 'rank': 5},\n",
+       " {'suit': 'diamonds', 'rank': 6},\n",
+       " {'suit': 'diamonds', 'rank': 7},\n",
+       " {'suit': 'diamonds', 'rank': 8},\n",
+       " {'suit': 'diamonds', 'rank': 9},\n",
+       " {'suit': 'diamonds', 'rank': 10},\n",
+       " {'suit': 'diamonds', 'rank': 11},\n",
+       " {'suit': 'diamonds', 'rank': 12},\n",
+       " {'suit': 'diamonds', 'rank': 13},\n",
+       " {'suit': 'diamonds', 'rank': 14},\n",
+       " {'suit': 'clubs', 'rank': 2},\n",
+       " {'suit': 'clubs', 'rank': 3},\n",
+       " {'suit': 'clubs', 'rank': 4},\n",
+       " {'suit': 'clubs', 'rank': 5},\n",
+       " {'suit': 'clubs', 'rank': 6},\n",
+       " {'suit': 'clubs', 'rank': 7},\n",
+       " {'suit': 'clubs', 'rank': 8},\n",
+       " {'suit': 'clubs', 'rank': 9},\n",
+       " {'suit': 'clubs', 'rank': 10},\n",
+       " {'suit': 'clubs', 'rank': 11},\n",
+       " {'suit': 'clubs', 'rank': 12},\n",
+       " {'suit': 'clubs', 'rank': 13},\n",
+       " {'suit': 'clubs', 'rank': 14},\n",
+       " {'suit': 'spades', 'rank': 2},\n",
+       " {'suit': 'spades', 'rank': 3},\n",
+       " {'suit': 'spades', 'rank': 4},\n",
+       " {'suit': 'spades', 'rank': 5},\n",
+       " {'suit': 'spades', 'rank': 6},\n",
+       " {'suit': 'spades', 'rank': 7},\n",
+       " {'suit': 'spades', 'rank': 8},\n",
+       " {'suit': 'spades', 'rank': 9},\n",
+       " {'suit': 'spades', 'rank': 10},\n",
+       " {'suit': 'spades', 'rank': 11},\n",
+       " {'suit': 'spades', 'rank': 12},\n",
+       " {'suit': 'spades', 'rank': 13},\n",
+       " {'suit': 'spades', 'rank': 14}]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deck = []\n",
+    "suits = ['hearts', 'diamonds', 'clubs', 'spades']\n",
+    "for suit in suits:\n",
+    "    for rank in range(2,15):\n",
+    "        card = {'suit': suit, 'rank':rank}\n",
+    "        deck.append(card)\n",
+    "deck"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,10 +108,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'suit': 'clubs', 'rank': 2},\n",
+       " {'suit': 'spades', 'rank': 7},\n",
+       " {'suit': 'hearts', 'rank': 4},\n",
+       " {'suit': 'diamonds', 'rank': 4},\n",
+       " {'suit': 'clubs', 'rank': 11}]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.shuffle(deck)\n",
+    "hand = deck[:5]\n",
+    "hand"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def contains_queen_of_hearts(a_list):\n",
+    "    for dict in a_list:\n",
+    "        if dict == {'suit':'hearts', 'rank': 12}:\n",
+    "            return True\n",
+    "    return False\n",
+    "contains_queen_of_hearts(deck)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'suit': 'diamonds', 'rank': 14}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_high_card(a_list):\n",
+    "    max_num = a_list[0]['rank']\n",
+    "    max_dict = a_list[0]\n",
+    "    for dict in a_list:\n",
+    "        if dict['rank'] > max_num:\n",
+    "            max_num = dict['rank']\n",
+    "            max_dict = dict\n",
+    "    return max_dict\n",
+    "get_high_card(hand)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +210,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_flush(a_list):\n",
+    "    tar_suit = a_list[0]['suit']\n",
+    "    for dict in a_list:\n",
+    "        if dict['suit'] != tar_suit:\n",
+    "            return False\n",
+    "    return True\n",
+    "a = [{'suit': 'diamonds', 'rank': 10}, {'suit': 'diamonds', 'rank': 13}, {'suit': 'diamonds', 'rank': 5}]\n",
+    "is_flush(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,6 +243,44 @@
     "\n",
     "_Bonus challenge:_ Return the rank of the pair of cards with the highest rank (e.g., if there is more than one pair!) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_pair(a_list):\n",
+    "    n = len(a_list)\n",
+    "    num_pair = 0\n",
+    "    pair_list = []\n",
+    "    for i in range(n):\n",
+    "        a = a_list[i]['rank']\n",
+    "        for j in range(i + 1, n):\n",
+    "            if a == a_list[j]['rank']:\n",
+    "                num_pair += 1\n",
+    "                pair_list.append(a_list[i])\n",
+    "                #pair_list.append(a_list[j])\n",
+    "                #print(pair_list)\n",
+    "                #return True\n",
+    "    if num_pair > 1:\n",
+    "        max_num = pair_list[0]['rank']\n",
+    "        for k in range(num_pair):\n",
+    "            if pair_list[k]['rank'] > max_num:\n",
+    "                max_num = pair_list[k]['rank']\n",
+    "            print(pair_list[k])\n",
+    "\n",
+    "a_list = [{'suit': 'hearts', 'rank': 13}, {'suit': 'diamonds', 'rank': 12}, {'suit': 'diamonds', 'rank': 5}, {'suit': 'hearts', 'rank': 4},\n",
+    " {'suit': 'diamonds', 'rank': 4}]            \n",
+    "has_pair(a_list)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -119,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
