--- a/exercise-2/exercise.ipynb
+++ b/exercise-2/exercise.ipynb
@@ -23,10 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[82, 18, 41, 60, 47, 80, 85, 2, 27, 9]]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "LIST_SIZE = 10\n",
+    "numbers = []\n",
+    "targets = []\n",
+    "a = list(range(0, LIST_SIZE**2))\n",
+    "numbers.append(random.sample(a, LIST_SIZE))\n",
+    "targets.append(random.choices(a, k = 1000))\n",
+    "numbers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,12 +57,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def linear_search(a_list, target):\n",
+    "    index = 0\n",
+    "    for element in a_list:\n",
+    "        if element == target:\n",
+    "            return index\n",
+    "        else:\n",
+    "            return -1\n",
+    "        index += 1\n",
+    "linear_search(targets, 71)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
